--- a/Backend/package.json
+++ b/Backend/package.json
@@ -11,7 +11,7 @@
   "keywords": [
     "MERN"
   ],
-  "author": "Akhilesh",
+  "author": "Lavkush",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
