--- a/Backend/.env
+++ b/Backend/.env
@@ -2,3 +2,5 @@ PORT=4002
 
 MONGODB_URI=mongodb+srv://kushvishwa0:EWFJMzMWh8zXr4n2@cluster0.2yjvx.mongodb.net/LCChatApp?retryWrites=true&w=majority&appName=Cluster0
 JWT_TOKEN=0hTa4U+5hJkjUektQIwImgAULcz7FQe1APCxaRyicz8=
+
+NODE_ENV="production"
